--- a/Src/Modules/Emails/Divstack.Company.Estimation.Tool.Emails.Payments/PaymentInitialized/Templates/payment_initialized.html
+++ b/Src/Modules/Emails/Divstack.Company.Estimation.Tool.Emails.Payments/PaymentInitialized/Templates/payment_initialized.html
@@ -192,7 +192,7 @@
                         "
                                                     valign="top"
                                             >
-                                                Price: <b>{AmountToPay}</b>
+                                                Amount to pay: <b>{AmountToPay}</b>
                                             </td>
                                         </tr>
                                         <tr
